...
        </TouchableOpacity>
      </View>

      <View className="p-4">
        <Text
          className="mb-3 text-lg font-bold text-blue-800"
          accessibilityLabel="Today's Tasks"
        >
          Today&#39;s Tasks
        </Text>
        {todayTasks.length === 0 ? (
          <Text
            className="p-5 text-center text-gray-500"
...
