appId: com.fieldservicemonorepo
---
- runFlow: login-technician.yaml
- tapOn:
    id: "tab-tasks"
- assertVisible: "All Tasks"
- setAirplaneMode: enabled
- tapOn:
    text: "Minimize"
    optional: true
- extendedWaitUntil:
    visible:
      id: "offline-banner-offline-text"
    timeout: 15000
- setAirplaneMode: disabled
- waitForAnimationToEnd
- assertNotVisible:
    id: "offline-banner-offline-text"
- assertVisible: "All Tasks"
